# plant-carrier-build-and-test

./: .gitignore  CMakeLists.txt  README.md  codecov.yml
.github/workflows/: CI.yml
applications/example/: CMakeLists.txt
applications/example/src/: main.cpp
applications/example/test/: CMakeLists.txt
applications/plantcarrier/: CMakeLists.txt
applications/plantcarrier/src/: main.cpp
libplantcarrier/: CMakeLists.txt  README.md
libplantcarrier/include/: Gripper.h  IGripper.h  IPlantCarrier.h  IPlantCarrierDemo.h  IScanner.h  IWheel.h  IWorkSession.h  PlantCarrier.h  PlantCarrierDemo.h  PlantCarrierStateMachine.h  Scanner.h  StepperMotorDriver.h  Wheel.h  WorkSession.cpp  WorkSession.h
libplantcarrier/src/: Gripper.cpp  PlantCarrier.cpp  PlantCarrierDemo.cpp  PlantCarrierStateMachine.cpp  Scanner.cpp  StepperMotorDriver.cpp  Wheel.cpp
libplantcarrier/test/: CMakeLists.txt
libplantcarrier/test/mocks/: CMakeLists.txt  GripperMock.h  PlantCarrierDemoMock.h  PlantCarrierMock.h  WheelMock.h
libplantcarrier/test/src/: PlantCarrierDemo_tests.cpp  PlantCarrier_tests.cpp  gripper_tests.cpp  tests_main.cpp  wheel_tests.cpp
